# RayTracing

./: CMakeLists.txt  IMAGE_SOURCES.txt  README.md  README.txt  build.cmd  input_image_sources.txt
cli/: CMakeLists.txt  main.cc
gui/: CMakeLists.txt  gui.cc  gui.h  main.cc
model/: CMakeLists.txt  camera.cc  camera.h  color.cc  color.h  complex_light_beam.cc  complex_light_beam.h  controller.cc  controller.h  display.cc  display.h  filter.cc  filter.h  lens.cc  lens.h  light_beam.cc  light_beam.h  master.h  math_expression.cc  math_expression.h  math_operation.cc  math_operation.h  matrix.cc  matrix.h  mpi_manager.cc  mpi_manager.h  plane.cc  plane.h  plane_test.cc  polygon.cc  polygon.h  ray.cc  ray.h  ray_diagram.cc  ray_diagram.h  root_finder.cc  root_finder.h  scene.cc  scene.h  slave.cc  (+6 more)
model/detail/: complex_light_beam.h  controller.cc  display.cc  display.h  filter.h  gui.cc  gui.h  lens.h  math_expression.cc  math_operation.cc  mpi_manager.cc  polygon.h  ray.h  ray_diagram.cc  slave.h  tracking_data.h  utilities.h
model/detail/shapes/: ball.h  ball_test.cc  composition.h  cube.cc  function_plot.cc  light_source.cc  light_source.h  shape.h
model/shapes/: ball.cc  ball.h  ball_test.cc  composition.cc  composition.h  cube.cc  cube.h  cylinder.cc  cylinder.h  function_plot.cc  function_plot.h  light_source.cc  light_source.h  plane_shape.cc  plane_shape.h  shape.cc  shape.h
param/: glass_of_wine.cmp  init.txt  sample.scn  space.scn  table.cmp  window.scn
src/: CMakeLists.txt  camera.cc  camera.h  color.cc  color.h  complex_light_beam.cc  complex_light_beam.h  controller.cc  controller.h  display.cc  display.h  filter.cc  filter.h  gui.cc  gui.h  lens.cc  lens.h  light_beam.cc  light_beam.h  main.cc  math_expression.cc  math_expression.h  math_operation.cc  math_operation.h  matrix.cc  matrix.h  mpi_manager.cc  mpi_manager.h  plane.cc  plane.h  polygon.cc  polygon.h  ray.cc  ray.h  ray_diagram.cc  ray_diagram.h  root_finder.cc  root_finder.h  scene.cc  scene.h  (+7 more)
src/shapes/: ball.cc  ball.h  ball_test.cc  composition.cc  composition.h  cube.cc  cube.h  cylinder.cc  cylinder.h  function_plot.cc  function_plot.h  light_source.cc  light_source.h  plane_shape.cc  plane_shape.h  shape.cc  shape.h
test/: CMakeLists.txt
test/integration_test/: CMakeLists.txt  main.cc
test/integration_test/tests/: sample.scn
test/performance_test/: .gitignore  CMakeLists.txt  main.cc
test/performance_test/test_scenes/: sample.scn
test/performance_test/timer_log/: sample.txt
test/system_test/: CMakeLists.txt  main.cc
test/system_test/test_scenes/: sample.scn
test/unit_test/: CMakeLists.txt  main.cc
tools/: build.cmd  check.cmd  checkAll.cmd  checkCopyright.cmd  updateCopyright.cmd
